# notifier-craft

./: .gitignore  LICENSE  README.md  async_example.py  example.py  pyproject.toml  test.py
notifiercraft/: __init__.py  client.py  main.py
notifiercraft/asyncio/: __init__.py  async_client.py
notifiercraft/error/: __init__.py  unsupported_sender_type.py
notifiercraft/sender/: __init__.py  email.py  email_sync.py  telegram.py  telegram_sync.py
